--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^16.10.2",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-tooltip": "^3.11.1"
   },
   "peerDependencies": {
     "react": "0.14.x || 15.x || 16.x",
